--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:id="@+id/talkNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="25sp" />
 
     <ListView
         android:id="@+id/listView"
