--- a/res/layout/talk.xml
+++ b/res/layout/talk.xml
@@ -12,18 +12,18 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
         </LinearLayout>
     </ScrollView>
-    
+
     <ImageView
+        android:id="@+id/loading"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/loading"
-        android:background="@drawable/loading"
         android:layout_centerInParent="true"
+        android:background="@drawable/loading"
         android:visibility="invisible" />
 
 </RelativeLayout>
