--- a/res/layout/talk.xml
+++ b/res/layout/talk.xml
@@ -5,8 +5,9 @@
 
       <com.handmark.pulltorefresh.library.PullToRefreshScrollView
         android:id="@+id/pull_refresh_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="330dp"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="false"
@@ -16,7 +17,7 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical" />
     </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
 
